Change font-color to white

--- a/src/app/github-search/github-search.component.css
+++ b/src/app/github-search/github-search.component.css
@@ -2,7 +2,7 @@ p{
   color:white;
 }
 .usersss p {
-  color:black;
+  color:white;
 }
 .jumbotron{
   background-color: black;
@@ -11,7 +11,7 @@ p{
   border-radius: 20px;
 }
 .jumbotron p {
-  color:black;
+  color:white;
 }
 .nav-bar{
   background-color: black;
