Updated the environments

--- a/src/app/github-search/github-search.component.html
+++ b/src/app/github-search/github-search.component.html
@@ -22,7 +22,7 @@
 
 
     <div class="jumbotron">
-      <img src="{{user.picture}}">
+      <img src="{{user.picture}}" width=40%>
       <div class="usersss">
         <p>Name: {{user.name}}</p>
         <p>Followers: {{user.followers}}</p>
