Updated github search

--- a/src/app/github-search/github-search.component.html
+++ b/src/app/github-search/github-search.component.html
@@ -11,7 +11,7 @@
 <div class="container">
 
 
-  <p>Find Users or Repositories!!</p>
+  <p>Find Users or Repositories!</p>
 
   <form class="" action="index.html" method="post" (keyup.enter)='searchUser()'>
     <input placeholder="Search" type="text" name="username" [(ngModel)]="username">
